package DP.Tutorial.Facade.Applications;

public class Application {
}
