package DP.Tutorial.Facade.Applications;

public class MusicApp extends Application {

    public void playMusic() {
        System.out.println("Music is playing");
    }

    public void stopMusic() {
        System.out.println("Music is stopped");
    }

}
