package DP.Tutorial.Facade.Applications;

public class SportsTrackerApp extends Application {

    public void beginSportsTracking() {
        System.out.println("Your jogging activity tracking has started");
    }

    public void endSportsTracking() {
        System.out.println("Your jogging activity tracking has finished");

    }

}
