package DP.Tutorial.Facade.Applications;

public class Twitter extends Application {

    public void shareStatus() {
        System.out.println("Your jogging activity status is shared on twitter");

    }

}

