package DP.Tutorial.Facade.Features;

public class Feature {
}
