package DP.Tutorial.Facade.Features;

public class GPS extends Feature {

    public void turnOn() {
        System.out.println("GPS is turned on");
    }

    public void turnOff() {
        System.out.println("GPS is turned off");
    }
}
