package DP.Tutorial.Facade.Features;

public class MobileData extends Feature {

    public void turnOn() {
        System.out.println("Mobile data is turned on");
    }

    public void turnOff() {
        System.out.println("Mobile data is turned off");
    }

}
