package DP.Tutorial.Facade.Features;

public class Wifi extends Feature {

    public void turnOn() {
        System.out.println("Wifi is turned on");
    }

    public void turnOff() {
        System.out.println("Wifi is turned off");
    }

}
